@@ -15,6 +15,7 @@
  ******************************************************************************/
 package com.wso2telco.gsma.authenticators;
 
+import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.wso2.carbon.identity.application.authentication.framework.AbstractApplicationAuthenticator;
@@ -39,8 +40,6 @@ import org.wso2.carbon.utils.multitenancy.MultitenantUtils;
 
 import com.wso2telco.gsma.authenticators.internal.CustomAuthenticatorServiceComponent;
 import com.wso2telco.gsma.authenticators.util.AuthenticationContextHelper;
-
-import sun.misc.BASE64Decoder;
 
 import javax.crypto.Cipher;
 import javax.servlet.http.HttpServletRequest;
@@ -293,9 +292,10 @@ public class MSISDNAuthenticator extends AbstractApplicationAuthenticator
         try {
 
             String publicK = readStringKey(filename);
-        byte[] keyBytes = new BASE64Decoder().decodeBuffer(publicK);
-        PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyBytes);
-        KeyFactory fact = KeyFactory.getInstance("RSA");
+            //byte[] keyBytes = new BASE64Decoder().decodeBuffer(publicK);
+            byte[] keyBytes = Base64.decodeBase64(publicK.getBytes());
+            PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyBytes);
+            KeyFactory fact = KeyFactory.getInstance("RSA");
 
             PKCS8EncodedKeySpec spec = new PKCS8EncodedKeySpec(keyBytes);
             KeyFactory kf = KeyFactory.getInstance(ENCRYPTION_ALGORITHM);
